--- a/src/Views/ViewNewUsuario.fxml
+++ b/src/Views/ViewNewUsuario.fxml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ViewNewLivro">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<Pane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+      minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/9"
+      fx:controller="Views.ViewNewLivro">
     <GridPane prefHeight="73.0" prefWidth="1366.0" style="-fx-background-color: '#1E90FF';">
         <columnConstraints>
             <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="480.0" minWidth="10.0" prefWidth="216.0" />
@@ -72,10 +66,10 @@
         <GridPane prefHeight="194.0" prefWidth="1096.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="319.0" minWidth="10.0" prefWidth="110.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="522.0" minWidth="10.0" prefWidth="400.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="637.0" minWidth="10.0" prefWidth="43.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="637.0" minWidth="10.0" prefWidth="110.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.0" minWidth="10.0" prefWidth="400.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="522.0" minWidth="10.0" prefWidth="427.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="637.0" minWidth="10.0" prefWidth="20.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="637.0" minWidth="10.0" prefWidth="57.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="502.0" minWidth="10.0" prefWidth="476.0"/>
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints maxHeight="582.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
@@ -93,22 +87,20 @@
                     <Font name="Segoe UI" size="18.0" />
                 </font>
             </TextField>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="RG" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;"
+                   text="RG" GridPane.columnIndex="3" GridPane.rowIndex="2">
                 <font>
                     <Font name="Segoe UI" size="20.0" />
                 </font>
             </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Endereco" GridPane.rowIndex="2">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;"
+                   text="Telefone" GridPane.rowIndex="2">
                 <font>
                     <Font name="Segoe UI" size="20.0" />
                 </font>
             </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="167.0" style="-fx: 60px;" text="Editora" GridPane.columnIndex="3" GridPane.rowIndex="2">
-                <font>
-                    <Font name="Segoe UI" size="20.0" />
-                </font>
-            </Label>
-            <TextField id="FieldAutor" fx:id="FieldAutor" onAction="#newBook" prefHeight="0.0" prefWidth="406.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
+            <TextField id="FieldAutor" fx:id="FieldAutor" onAction="#newBook" prefHeight="35.0" prefWidth="423.0"
+                       GridPane.columnIndex="4" GridPane.rowIndex="2">
                 <font>
                     <Font name="Segoe UI" size="18.0" />
                 </font>
@@ -118,17 +110,13 @@
                     <Font name="Segoe UI" size="18.0" />
                 </font>
             </TextField>
-            <TextField id="FieldEditora" fx:id="FieldEditora" onAction="#newBook" prefHeight="9.0" prefWidth="406.0" GridPane.columnIndex="4" GridPane.rowIndex="2">
-                <font>
-                    <Font name="Segoe UI" size="18.0" />
-                </font>
-            </TextField>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefWidth="167.0" text="Telefone" GridPane.rowIndex="1">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefWidth="167.0" text="Endereco" GridPane.rowIndex="1">
                 <font>
                     <Font name="Segoe UI" size="20.0" />
                 </font>
             </Label>
-            <TextField id="FieldLocation" fx:id="FieldLocation" onAction="#newBook" prefHeight="35.0" prefWidth="521.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TextField id="FieldLocation" fx:id="FieldLocation" onAction="#newBook" prefHeight="35.0" prefWidth="521.0"
+                       GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="1">
                 <font>
                     <Font name="Segoe UI" size="18.0" />
                 </font>
