--- a/src/Views/ViewUsuarios.fxml
+++ b/src/Views/ViewUsuarios.fxml
@@ -50,7 +50,7 @@
         </TextField>
     </GridPane>
     <VBox layoutX="-2.0" layoutY="71.0" prefHeight="697.0" prefWidth="210.0" style="-fx-background-color: '#1E90FF';">
-        <Button fx:id="btnMainLivros" mnemonicParsing="false" onAction="#goToViewLivros" prefHeight="50.0"
+        <Button fx:id="btnMainLivros" mnemonicParsing="false" onAction="#goToViewNewUsuario" prefHeight="50.0"
                 prefWidth="208.0" style="-fx-background-color: '#1E90FF';" text="Livros" textFill="WHITE">
             <font>
                 <Font name="Segoe UI" size="22.0" />
