--- a/src/Views/ViewLivros.fxml
+++ b/src/Views/ViewLivros.fxml
@@ -30,7 +30,7 @@
 
             </effect>
             <cursor>
-                <Cursor fx:constant="S_RESIZE" />
+                <Cursor fx:constant="CLOSED_HAND" />
             </cursor>
         </Button>
         <Button mnemonicParsing="false" onAction="#goToViewNewlivro" prefHeight="30.0" prefWidth="71.0" text="Novo livro" GridPane.columnIndex="2">
